--- a/modules/theme/sources/styles/theme-mac.scss
+++ b/modules/theme/sources/styles/theme-mac.scss
@@ -21,10 +21,6 @@ $url-bar-hover-shadow: inset 0 0 2px #aec6de;
     src: url("chrome://cliqz/content/static/skin/fonts/Lato-Regular.ttf");
 }
 
-.cliqz-urlbar-Last-search {
-    padding-top: 3px;
-}
-
 :root {
     --menupanel-list-style-image: url("chrome://cliqz/content/theme/images/browser/mac/menuPanel.png");
     --menupanel-list-style-image-2x: url("chrome://cliqz/content/theme/images/browser/mac/menuPanel@2x.png") !important;
@@ -375,6 +371,7 @@ toolbarbutton.bookmark-item:not(.subviewbutton):not(#bookmarks-menu-button),
 
 #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
     margin-top: 1px;
+    height: 19px;
 }
 
 #nav-bar-customization-target {
@@ -602,7 +599,7 @@ toolbarbutton#cliqz-cc-btn {
 #nav-bar #PanelUI-menu-button {
     height: $urlbar-elms-height !important;
     -moz-margin-start: 0;
-    margin: 0 1px !important;
+    margin: 0 0 0 1px !important;
     min-width: 37px !important;
     border-radius: 0 !important;;
     border-left: 1px solid #ccc !important;
